# workshop-pandas

./: README.md
codigo/: Começando.ipynb  pyproject.toml
codigo/db/: Contoso - Cadastro Produtos.csv  telecom_users.csv
