[tool.poetry]
name = "workshop-pandas"
version = "0.1.0"
description = "Workshop Pandas"
authors = ["Emerson Delatorre <emerson@delatorre.dev>"]
readme = "README.md"
packages = [{include = "workshop_pandas"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
